--- a/main.css
+++ b/main.css
@@ -133,6 +133,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  flex-wrap: wrap;
   background-color: #f5f5f5;
   padding: 2px 12px;
   font-size: 1.1rem;
