--- a/main.css
+++ b/main.css
@@ -76,6 +76,7 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+   flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
